2001-03-31  Kingpin  <mthurn@tasc.com>
	
	* VERSION 2.22 RELEASED
	
2001-03-30  Kingpin  <mthurn@tasc.com>

	* lib/WWW/Search/Yahoo.pm (native_setup_search): added support for subclassing

	* lib/WWW/Search/Yahoo/UK.pm: new backend

	* lib/WWW/Search/Yahoo/Korea.pm: new backend

2000-12-16
	
	* VERSION 2.21 RELEASED
	
2000-12-15  Kingpin  <mthurn@tasc.com>

	* Yahoo.pm (native_retrieve_some): clean up URL parsing (yahoo.com added text to it)

2000-11-11
	
	* VERSION 2.19 RELEASED
	
2000-11-10  Kingpin  <mthurn@tasc.com>

	* Yahoo.pm (native_retrieve_some): rewrote parser using HTML::TreeBuilder

2000-09-23
	
	* VERSION 2.17 RELEASED
	
2000-09-22  Kingpin  <mthurn@tasc.com>

	* Yahoo.pm (native_retrieve_some): fix description parsing and URL parsing

2000-09-20
	
	* VERSION 2.16 RELEASED
	
2000-09-19  Kingpin  <mthurn@tasc.com>

	* Yahoo.pm (native_retrieve_some): fix gui-style results parsing

2000-09-15
	
	* VERSION 2.15 RELEASED
	
2000-09-14  Kingpin  <mthurn@tasc.com>

	* Yahoo.pm (native_retrieve_some): fix result-count parsing

2000-07-05  Kingpin  <mthurn@tasc.com>

	* VERSION 2.14 RELEASED

	* Yahoo.pm (native_retrieve_some): fixed parsing for new output format

2000-05-11  Kingpin  <mthurn@tasc.com>

	* VERSION 2.13 RELEASED

2000-05-10  Kingpin  <mthurn@tasc.com>

	* Yahoo.pm: fixed parsing for all sections of gui_query results

2000-04-28  Kingpin  <mthurn@tasc.com>

	* VERSION 2.11 RELEASED

2000-04-27  Kingpin  <mthurn@tasc.com>

	* test.pl: new test case for gui_query

	* Yahoo.pm: new URL for gui_query

2000-04-03  Kingpin  <mthurn@tasc.com>

	* VERSION 2.09 RELEASED

2000-03-27  Kingpin  <mthurn@tasc.com>

	* test.pl: updated test cases

	* Yahoo.pm: (2.09) fixed for new CGI options

2000-03-20  Kingpin  <mthurn@tasc.com>

	* test.pl: added "real" test

Revision history for Perl extension WWW::Search::Yahoo.

2.07  Fri Feb  4 10:01:42 2000
	- original version; created by h2xs 1.19
