@@ -3,7 +3,8 @@ WriteMakefile(
               'NAME' => 'WWW::Search::Yahoo',
               'VERSION_FROM' => 'lib/WWW/Search/Yahoo.pm',
               'PREREQ_PM' => {
-                              'HTML::TreeBuilder' => 0,
-                              'WWW::Search' => 2.15,
+                              'Date::Manip' => 1,  # any version should do
+                              'HTML::TreeBuilder' => 3.00,
+                              'WWW::Search' => 2.23,
                              },
              );
